# SolDirectx_Demo

./: .gitignore  README.md
SolDirectX/: .editorconfig  CMakeLists.txt
SolDirectX/source/: SolDirectX.cpp
SolDirectX/source/framework/: object.h
SolDirectX/source/header/: SolDirectX.h  configure.h  d3dUtil.h  d3dx12.h  window.h
SolDirectX/source/header/Common/: MathHelper.h  UploadBuffer.h
SolDirectX/source/header/Window/: LittleRendererWindow.h
SolDirectX/source/header/gfx/: gfx_object.h
SolDirectX/source/src/: d3dUtil.cpp  window.cpp
SolDirectX/source/src/gfx/: gfx_object.cpp
SolDirectX/source/src/window/: LittleRendererWindow.cpp
